Rework (#469)
Changes #444, #445, #447, #448, #450, #452, #453, #455, #456, #457, #460. #462, #464